--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "themes/simple-hugo-theme"]
 	path = themes/simple-hugo-theme
 	url = https://github.com/Xzya/simple-hugo-theme.git
+[submodule "public"]
+	path = public
+	url = https://github.com/mbikovitsky/mbikovitsky.github.io.git
+	branch = master
