Add writing section

--- a/config.toml
+++ b/config.toml
@@ -22,9 +22,13 @@ copyright = "2019 — Michael Bikovitsky — CC BY-SA 4.0."
     name = "blog"
     weight = 1
   [[menu.main]]
+    url = "/writing/"
+    name = "writing"
+    weight = 2
+  [[menu.main]]
     url = "/about/"
     name = "about"
-    weight = 2
+    weight = 3
 
   # Footer
   [[menu.footer]]
