Add Twitter link to footer

--- a/config.toml
+++ b/config.toml
@@ -35,3 +35,7 @@ copyright = "2019 — Michael Bikovitsky — CC BY-SA 4.0."
     url = "https://github.com/mbikovitsky"
     name = "GitHub"
     weight = 1
+  [[menu.footer]]
+    url = "https://twitter.com/mbikovitsky"
+    name = "Twitter"
+    weight = 2
