--- a/config.toml
+++ b/config.toml
@@ -14,6 +14,12 @@ paginatePath = "page"
 # Copyright
 copyright = "© 2019 — Michael Bikovitsky — CC BY-SA 4.0."
 
+# Highlighting
+pygmentsCodefences = true
+pygmentsCodeFencesGuessSyntax = true
+pygmentsoptions = "linenos=table"
+pygmentsStyle = "vs"
+
 # Menu
 [menu]
   # Header
