Fix HTML in Markdown rendering

--- a/config.toml
+++ b/config.toml
@@ -50,3 +50,6 @@ pygmentsStyle = "vs"
 [permalinks]
   blog = "/blog/:year/:month/:filename/"
   writing = "/writing/:year/:month/:filename/"
+
+[markup.goldmark.renderer]
+unsafe = true
