--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ copyright = "© 2021 — Michael Bikovitsky — CC BY-SA 4.0."
 # Highlighting
 [markup.highlight]
 lineNos = true
-style = "vs"
+style = "monokai"
 
 # Menu
 [menu]
