--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ paginate = 10
 paginatePath = "page"
 
 # Copyright
-copyright = "© 2021 — Michael Bikovitsky — CC BY-SA 4.0."
+copyright = "© 2021 — Michael Bikovitsky — CC BY 4.0"
 
 # Highlighting
 [markup.highlight]
